--- a/styles.css
+++ b/styles.css
@@ -44,13 +44,7 @@ footer {
     padding-left: 3vw;
     margin-left: 10vw;
     margin-right: 5vw;
-
-    /*border-top: 0.01em solid rgb(220, 220, 220);
-    border-left: 0.01em solid rgb(220, 220, 220);
-    border-right: 0.01em solid rgb(220, 220, 220);
-    border-top: 0.01vh solid rgb(220, 220, 220);*/
 }
-
 
 #icone {
     height: 10vh;
@@ -61,14 +55,6 @@ footer {
     border-width: 0.3vh;
     border-radius: 1vw;
     background: linear-gradient(90deg, rgb(22, 112, 139) 0%, rgb(0, 183, 255) 35%);
-}
-
-header a {
-    text-decoration: none;
-}
-
-header:hover a, #icone {
-    transform: translate(-0.2em, -0.2em);
 }
 
 h1 {
@@ -88,6 +74,7 @@ h2 {
     font-family: sans-serif;
     font-weight: 300;
     
+    border-color: inherit;
     border-bottom: 0.3vh solid;
 }
 
@@ -105,8 +92,8 @@ main h3 {
 
 .imgsLaterais {
     float: right;
-    height: 20vw;
-    width: 20vw;
+    height: 30vw;
+    width: 30vw;
     margin-right: 5vw;
 }
 
@@ -127,64 +114,6 @@ li {
 h3 {
     margin: 0;
     margin-bottom: 1vh;
-}
-
-/************************************* Switch para temas *******************************************/
-
-#alternar-tema {
-    display: none;
-}
-
-#switch {
-    display: flex;
-    position: relative;
-    flex-wrap: wrap;
-    place-content: center space-evenly;
-
-    height: 1.7vw;
-    width: 3.4vw;
-
-    border: 0.5vh solid white;
-    font-size: 1.1vw;
-    border-radius: 3.4vw;
-}
-
-#lua {
-    transition: opacity 0.25s;
-    color: #00bcd4;
-}
-
-#sol {
-    transition: opacity 0.25s;
-    color: rgb(255, 187, 0);
-}
-
-#bola {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    height: 1.1vw;
-    width: 1.1vw;
-    transition: left 0.3s;
-
-    background-color: white;
-    border-radius: 50%;
-}
-
-.checked {
-    opacity: 0;
-}
-
-.bola-unchecked {
-    left: 0.2vw;
-
-    border: 0.2vw solid #00bcd4;
-}
-
-.bola-checked {
-    left: 1.8vw;
-
-    border: 0.2vw solid rgb(255, 187, 0);
 }
 
 /*********************************** Temas ***********************************/
@@ -227,6 +156,79 @@ h3 {
 .icones-escuros {
     color: #1f1f24;
 }
+
+footer.tema-escuro h3, footer.tema-escuro li {
+    color: rgba(220, 220, 220, 0.685);
+}
+
+footer.tema-claro h3, footer.tema-claro li {
+    color: #36363d;
+}
+
+/************************************* Switch para temas *******************************************/
+
+button {
+    display: none;
+}
+
+.switch {
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    place-content: center space-evenly;
+
+    height: 1.7vw;
+    width: 3.4vw;
+
+    border: 0.5vh solid white;
+    font-size: 1.1vw;
+    border-radius: 3.4vw;
+}
+
+.luas {
+    display: block;
+    transition: opacity 0.3s;
+    color: #00bcd4;
+}
+
+.sois {
+    transition: opacity 0.3s;
+    color: rgb(255, 187, 0);
+}
+
+.bola {
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 1.1vw;
+    width: 1.1vw;
+    transition: left 0.3s;
+
+    background-color: white;
+    border-radius: 50%;
+}
+
+.checked {
+    opacity: 0;
+}
+
+.bola-unchecked {
+    left: 0.2vw;
+
+    border: 0.2vw solid #00bcd4;
+}
+
+.bola-checked {
+    left: 1.8vw;
+
+    border: 0.2vw solid rgb(255, 187, 0);
+}
+
+#switch-mobile {
+    display: none;
+}
+
 /************************************** Nav para telas maiores *************************************/
 
 nav {
@@ -268,20 +270,23 @@ nav a:hover .icones, nav a:hover label {
     color: yellow;
 }
 
-/************************************ Estilização do conteúdo principal *******************************************/
+/************************************ Estilização para telas menores *******************************************/
 
 @media screen and (max-width: 768px) {
     body {
-        grid-template-rows: 8vh auto 8vh;
+        grid-template-rows: 10vh auto auto;
     }
 
     header {
+        height: 10vh;
         padding-left: 2vw;
     }
 
     main {
         margin-left: 3vw;
         margin-right: 3vw;
+        padding: 0;
+        text-align: center;
     }
 
     main p {
@@ -291,8 +296,14 @@ nav a:hover .icones, nav a:hover label {
     }
 
     footer {
+        display: block;
+        text-align: center;
         margin-left: 3vw;
         margin-right: 3vw;
+    }
+
+    ul {
+        margin: 0;
     }
     
     nav {
@@ -306,6 +317,46 @@ nav a:hover .icones, nav a:hover label {
     main li {
         margin: 0;
         margin-right: 5vw;
+    }
+
+    .imgsLaterais {
+        margin: 2vh 0 2vh 0;
+        float: none;
+        height: 50vw;
+        width: 50vw;
+        display: inline;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .switch {
+        position: absolute;
+        left: 60vw;
+        margin-left: 25vw;
+        height: 5vw;
+        width: 10vw;
+    }
+
+    .bola {
+        height: 3.2vw;
+        width: 3.2vw;
+        border-width: 0.6vw;
+    }
+
+    .bola-checked {
+        left: 4.8vw;
+    }
+
+    .bola-unchecked {
+        left: 1vw;
+    }
+    
+    header i {
+        font-size: 3em;
+    }
+
+    #switch-mobile {
+        display: flex;
     }
 }
 
