--- a/bijetiva/styles.css
+++ b/bijetiva/styles.css
@@ -20,6 +20,7 @@ form {
     padding: 0 3vh 3vh 3vh;
     border-radius: 6px;
     border: 1px solid #333;
+    float: left;
 }
 .container {
     display: grid;
@@ -54,6 +55,7 @@ form {
 .containerVertical {
     display: none;
 }
+/* DEACTIVATED CODE
 @media (max-width: 600px) {
     .container {
         display: none;
@@ -73,16 +75,25 @@ form {
     p {
         margin: 4px;
     }
+}*/
+span {
+    font-size: larger;
+}
+span b {
+    opacity: 1;
 }
 .chaves1 {
     grid-row: 1;
-    margin: 3px;
+    margin: 3px 3px 9px 3px;
     opacity: 0.6;
 }
 .chaves2 {
     grid-row: 3;
-    margin: 3px;
+    margin: 3px 3px 9px 3px;
     opacity: 0.6;
+}
+#c1, #c2 {
+    margin: 3px;
 }
 p {
     grid-row: 2;
@@ -134,6 +145,11 @@ button {
 }
 button:hover {
     background-color: #292929;
+}
+.nota {
+    position: absolute;
+    background-color: #1e1e1e;
+    border: 1px solid #333;
 }
 /************ Switch Deslizante ************/
 .switch-container {
@@ -193,4 +209,69 @@ input:checked + .slider {
 input:checked + .slider:before {
     transform: translateX(25px);
 }
-/*******************************/
+/*************** Notas ****************/
+.note-point {
+    left: 150px;
+    position: relative;
+    display: inline-block;
+}
+.note {
+    position: absolute;
+    background: #282a36;
+    padding: 5px;
+    border-left: 4px solid #007bff;
+    transition: opacity 0.25s ease, visibility 0.5s ease;
+    top: 100%;
+    left: 50%;
+    width: 300px;
+}
+.note p {
+    text-align: justify;
+    width: 90%;
+    margin-left: 1vw;
+}
+#info {
+    position: absolute;
+    top: 0.5vh;
+    left: 0.5vh;
+    background-color: #090913;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    transition: color 0.3s ease, border 0.3s ease;
+}
+#info:hover {
+    background-color: #292929;
+}
+.activated {
+    color: #007bff;
+    border: 2px solid #007bff;
+}
+.deactivated {
+    color: #282a36;
+    border: 2px solid #282a36;
+}
+.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+.nota {
+    position: unset;
+    width: 774px;
+    margin-top: 1vh;
+    background: #282a36;
+    padding: 5px;
+    border-left: 4px solid #007bff;
+    transition: opacity 0.25s ease, visibility 0.5s ease;
+}
+.nota p {
+    text-align: justify;
+    width: 90%;
+    margin-left: 1vw;
+}
+h3 {
+    margin: 2vh 0 0 1vh;
+}
