--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,7 @@ nav {
 
     margin: 0;
     height: 100vh;
+    min-width: 70px;
     width: 4vw;
     padding-right: 0.5vw;
     padding-left: 0.5VW;
